// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`labels the turn with GPICK 1`] = `
<Turn
  t={[Function]}
  turn={
    Turn {
      "action": "PICK",
      "exclusivity": "GLOBAL",
      "executingPlayer": "HOST",
      "hidden": false,
      "id": "mocked-uuid",
      "parallel": false,
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;

exports[`labels the turn with PICK 1`] = `
<Turn
  t={[Function]}
  turn={
    Turn {
      "action": "PICK",
      "exclusivity": "NONEXCLUSIVE",
      "executingPlayer": "HOST",
      "hidden": false,
      "id": "mocked-uuid",
      "parallel": false,
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;

exports[`labels the turn with xPICK 1`] = `
<Turn
  t={[Function]}
  turn={
    Turn {
      "action": "PICK",
      "exclusivity": "EXCLUSIVE",
      "executingPlayer": "HOST",
      "hidden": true,
      "id": "mocked-uuid",
      "parallel": false,
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;
